# multiverse-x-hackbros

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  storage.json
.github/actions/setup-repo/: action.yaml
.github/workflows/: check.yaml  test.yaml
crates/backend/: Cargo.toml
crates/backend-core/: Cargo.toml
crates/backend-core/src/: configuration.rs  error.rs  handlers.rs  lib.rs  state.rs  storage_layer.rs
crates/backend-core/src/handlers/: bridge_token.rs  health.rs  mod.rs
crates/backend-core/src/mtx/: mod.rs  monitor.rs  sign.rs
crates/backend/src/: main.rs  telemetry.rs
crates/bridge-contract/: Cargo.toml  package-lock.json  package.json
crates/bridge-contract/interact/: data.json  index.ts
crates/bridge-contract/meta/: Cargo.toml
crates/bridge-contract/src/: lib.rs
crates/bridge-contract/wasm/: Cargo.toml
crates/bridge-contract/wasm/src/: lib.rs
crates/smart-contracts/: Cargo.toml
crates/smart-contracts/output/: vault.abi.json  vault.mxsc.json  vault.wasm
crates/smart-contracts/scenarios/: empty.scen.json
crates/smart-contracts/src/: vault.rs
crates/smart-contracts/wasm/src/: lib.rs
frontend/: .eslintrc  .gitignore  README.md  components.json  package.json  prepare.mjs  tailwind.config.js  tsconfig.json
frontend/.github/workflows/: pre-merge-e2e-tests.yml
frontend/app/routes/: _index.tsx
frontend/cypress/constants/: enums.ts
frontend/cypress/e2e/SCTransactions/: SCActions.ts  SCTransaction.cy.ts
frontend/public/: coin.gltf  multiversex.gltf
frontend/src/: App.tsx
frontend/src/assets/gltf/: coin.tsx  multiversex.tsx
frontend/src/components/: index.ts
frontend/src/components/Button/: Button.tsx
frontend/src/components/Card/: Card.tsx
frontend/src/components/ContractAddress/: ContractAddress.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/config/: config.devnet.ts
frontend/src/contracts/: contract.abi.json
frontend/src/hooks/: use-all-tokens.ts  use-token-transfer.ts
frontend/src/hooks/transactions/: index.ts  use-send-tokens-from-mx.ts  useSendPingPongTransaction.ts
frontend/src/localConstants/routes/: routeNames.enums.ts
frontend/src/pages/: index.ts
frontend/src/pages/Bridge/: Bridge.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/routes/: routes.ts
frontend/src/services/: mtxTokenService.ts  tester.ts
frontend/src/stores/: transaction.store.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: host.ts  smartContract.ts
localnet/: .gitignore  localnet.toml
(+21 files in other folders)
