[workspace]
members = ["crates/*", "crates/smart-contracts/meta"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
  "std",
] }
axum = { version = "0.6", features = ["macros"] }
redact = { version = "0.1", features = ["serde"] }
thiserror = { version = "1.0" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "valuable",
  "tracing",
] }
ibc-proto = "0.36.1"