[workspace]
members = ["crates/*", "crates/bridge-contract/meta", "crates/bridge-contract"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
  "std",
] }
axum = { version = "0.6", features = ["macros"] }
redact = { version = "0.1", features = ["serde"] }
thiserror = { version = "1.0" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "valuable",
  "tracing",
] }
ibc-proto = "0.37"
num-bigint = "0.4"
multiversx-sdk = "0"
base64 = "0.21"
multiversx-sc = "0.43.4"
multiversx-sc-snippets = "0.41.2"
