[package]
name = "backend-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
serde_json.workspace = true
redact.workspace = true
axum.workspace = true
thiserror.workspace = true
ibc-proto.workspace = true
serde.workspace = true
num-bigint.workspace = true
multiversx-sdk.workspace = true

contract = {path = "../bridge-contract"}
